--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-MONGOBD_URI= mongodb+srv://Ira:0sZATpGxXHT6EOgs@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
+MONGOBD_URI = mongodb+srv://Iryna:iQUQx2bPs7z8KVVj@cluster0.pzq6w.mongodb.net/newUsers?retryWrites=true&w=majority
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
 JWT_SECRET= 54524545245ewewe2
 
 JWT_RESET_PASSWORD= bfdjshbbsvi48r51e215
+
+GMAIL_PASSWORD= HYF123456
