validation of user email

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ JWT_SECRET= 54524545245ewewe2
 JWT_RESET_PASSWORD= bfdjshbbsvi48r51e215
 
 GMAIL_PASSWORD= HYF123456
+
+CLIENT_URL= http://localhost:3000
