--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOBD_URI = mongodb+srv://Iryna:iQUQx2bPs7z8KVVj@cluster0.pzq6w.mongodb.net/newUsers?retryWrites=true&w=majority
+MONGOBD_URI = mongodb+srv://Ira:0sZATpGxXHT6EOgs@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
