--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
 JWT_SECRET= 54524545245ewewe2
 
-JWT_RESET_PASSWORD= bfdjshbbsvi48r51e215
+JWT_RESET_PASSWORD= ishooljsbckjasbci48r51e215
 
 GMAIL_PASSWORD= HYF123456
 
