--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGOBD_URI = mongodb+srv://Ira:0sZATpGxXHT6EOgs@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
+
+MONGOBD_URI = mongodb+srv://localhost:27017/hyf;
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
