started google login in

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ JWT_RESET_PASSWORD= ishooljsbckjasbci48r51e215
 
 GMAIL_PASSWORD= HYF123456
 
+REACT_APP_GOOGLE_CLIENT= 990055077269-l47rkpf9l1k5qmcdreo2t9uf30fc7ljv.apps.googleusercontent.com
+
