--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.2.2",
     "react-places-autocomplete": "^7.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
