--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOBD_URI = mongodb+srv://Olga:OEKaEKn5hG8haB8M@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
+MONGOBD_URI = mongodb+srv://Ira:0sZATpGxXHT6EOgs@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
@@ -8,5 +8,7 @@ JWT_RESET_PASSWORD= ishooljsbckjasbci48r51e215
 
 GMAIL_PASSWORD= HYF123456
 
-REACT_APP_GOOGLE_CLIENT= 990055077269-l47rkpf9l1k5qmcdreo2t9uf30fc7ljv.apps.googleusercontent.com
+GOOGLE_CLIENT = 990055077269-l47rkpf9l1k5qmcdreo2t9uf30fc7ljv.apps.googleusercontent.com
+
+
 
