--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.9.2",
+        "google-auth-library": "^6.1.4",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.8.7",
         "nodemailer": "^6.4.17",
