--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
-MONGOBD_URI = mongodb+srv://localhost:27017/hyf;
+MONGOBD_URI = MONGOBD_URI = mongodb://localhost:27017/hyf
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
