--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.1",
     "react-toastify": "^6.2.0"
   },
   "scripts": {
