--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
