code review and bugfix

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOBD_URI = MONGOBD_URI = mongodb://localhost:27017/hyf
+MONGOBD_URI = mongodb+srv://Ira:0sZATpGxXHT6EOgs@cluster0.l1fuv.mongodb.net/hyf?retryWrites=true&w=majority
 
 JWT_ACCOUNT_ACTIVATION=someincreadiablemagic54672152Activation
 
