--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "nodemailer": "^6.4.17",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "react-geocode": "^0.2.2"
     },
     "devDependencies": {
         "concurrently": "^5.3.0",
